tests/ui/g-efflist-deref.stderr
error[E0599]: no method named `eff_list` found for struct `RoleProgram<'prog, ROLE, Mint>` in the current scope
  --> tests/ui/g-efflist-deref.rs:12:21
   |
12 |     let _ = program.eff_list();
   |                     ^^^^^^^^ method not found in `RoleProgram<'_, 0>`
